logs/dag_id=my_second_dagV4/run_id=manual__2023-01-28T10:00:18.485978+00:00/task_id=insert_task/attempt=1.log
[2023-01-28T10:00:20.936+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: my_second_dagV4.insert_task manual__2023-01-28T10:00:18.485978+00:00 [queued]>
[2023-01-28T10:00:20.946+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: my_second_dagV4.insert_task manual__2023-01-28T10:00:18.485978+00:00 [queued]>
[2023-01-28T10:00:20.946+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-01-28T10:00:20.946+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 1
[2023-01-28T10:00:20.946+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-01-28T10:00:20.959+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): insert_task> on 2023-01-28 10:00:18.485978+00:00
[2023-01-28T10:00:20.965+0000] {standard_task_runner.py:55} INFO - Started process 10575 to run task
[2023-01-28T10:00:20.968+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'my_second_dagV4', 'insert_task', 'manual__2023-01-28T10:00:18.485978+00:00', '--job-id', '36', '--raw', '--subdir', 'DAGS_FOLDER/dag2.py', '--cfg-path', '/tmp/tmp8zvbgksg']
[2023-01-28T10:00:20.968+0000] {standard_task_runner.py:83} INFO - Job 36: Subtask insert_task
[2023-01-28T10:00:21.083+0000] {task_command.py:388} INFO - Running <TaskInstance: my_second_dagV4.insert_task manual__2023-01-28T10:00:18.485978+00:00 [running]> on host 9763ece73850
[2023-01-28T10:00:21.163+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=my_second_dagV4
AIRFLOW_CTX_TASK_ID=insert_task
AIRFLOW_CTX_EXECUTION_DATE=2023-01-28T10:00:18.485978+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-01-28T10:00:18.485978+00:00
[2023-01-28T10:00:21.164+0000] {sql.py:254} INFO - Executing: 
            insert into dag_runs(dt, dag_id) VALUES (%(ds)s, dag is dag not a dag22)
        
[2023-01-28T10:00:21.172+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-01-28T10:00:21.357+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-01-28T10:00:21.368+0000] {sql.py:375} INFO - Running statement: 
            insert into dag_runs(dt, dag_id) VALUES (%(ds)s, dag is dag not a dag22)
        , parameters: {'ds': datetime.datetime(2022, 2, 10, 0, 0)}
[2023-01-28T10:00:21.369+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 378, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "dag"
LINE 2: ... VALUES ('2022-02-10T00:00:00'::timestamp, dag is dag not a ...
                                                             ^

[2023-01-28T10:00:21.380+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=my_second_dagV4, task_id=insert_task, execution_date=20230128T100018, start_date=20230128T100020, end_date=20230128T100021
[2023-01-28T10:00:21.415+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 36 for task insert_task (syntax error at or near "dag"
LINE 2: ... VALUES ('2022-02-10T00:00:00'::timestamp, dag is dag not a ...
                                                             ^
; 10575)
[2023-01-28T10:00:21.424+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-01-28T10:00:21.444+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
